# hardwise

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.trellis/: .template-hashes.json  workflow.md
docs/: PLAN.html  PLAN.md  architecture.md  closeout_pressure_summary.html  closeout_pressure_summary.md  demo.html  demo.md  demo_recording_script.html  demo_recording_script.md  demo_switch_board.md  docs_inventory.html  docs_inventory.md  documentation_cleanup_handoff.md  evidence_chain_audit.html  evidence_chain_audit.md  faq.html  faq.md  hardware-demo-review-queue.html  hardware-demo.html  hardwise_evolution_narrative.md  hardwise_social_drafts.md  index.html  interview_narrative.html  interview_narrative.md  interview_qa.md  investment-decision-card.html  jd_alignment.html  jd_alignment.md  learning_log.md  midpoint_review.html  midpoint_review.md  mvp_definition.html  mvp_definition.md  product-intro.html  profile_archetypes.md  public_evidence_pack_pilot.md  review_node.md  reviewer_closure_implementation_report.md  rolling_log.md  rolling_log_implementation_report.md  (+6 more)
eval/: README.md  manifest.yaml
scripts/: capture_pin_table_export.tcl  export_workbench_contracts.py  start_hardwise_workbench.cmd  start_hardwise_workbench.command  start_hardwise_workbench.ps1
tests/: test_cli_allegro_bom_report.py  test_cli_allegro_netlist.py  test_cli_bom_match.py  test_cli_component_validation_report.py  test_cli_helpers.py  test_cli_pin_profile_report.py  test_cli_pin_table_report.py  test_cli_validator_ui.py  (+14 more)
(+690 files in other folders)
